<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dimitriskatsikas.dryingtime.MainActivity"
    android:fillViewport="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/margin_top1"
    android:paddingBottom="@dimen/activity_vertical_margin">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/in_out"
        android:textStyle="bold"
        android:id="@+id/textView"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radioButton"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outdoor"
            android:id="@+id/radioButton"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:onClick="onRadioButtonClicked"
            android:textSize="16dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indoor"
            android:id="@+id/radioButton2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:onClick="onRadioButtonClicked"
            android:textSize="16dp"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/line"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/temperature"
        android:id="@+id/textView3"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/hint1"
        android:textStyle="italic"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:textSize="16dp"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />


    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:text="@string/calculatebutton"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:id="@+id/button"
        android:onClick="CalculateClick"
        android:textColor="@drawable/button_color_text"
        android:background="@drawable/button_custom"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"/>



</RelativeLayout>
</ScrollView>